alignment fix of votes and some linking works with votes and user profile

--- a/src/components/Vote/Vote.module.css
+++ b/src/components/Vote/Vote.module.css
@@ -1,25 +1,20 @@
 .voteContainer {
-    display: flex;
-    align-items: center;
-  gap: 15px;
-    width: 200px;
-    margin: 20px auto;
-    flex-direction: column;
-  }
-  
-  .vote-button {
-    padding: 10px 20px;
-    border-radius: 5px;
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    cursor: pointer;
-    outline: none;
-  }
-  
-  .voteCount {
-    font-size: 20px;
-    margin: 0 10px;
-    color: #333;
-  }
-  
+  display: flex;
+  align-items: center;
+  padding-left: 10px;
+  padding-right: 10px;
+  gap: 5px;
+  width: 20px;
+  flex-direction: column;
+  background: linear-gradient(
+    90deg,
+    rgb(19, 43, 58) 0%,
+    rgb(63, 63, 232) 35%,
+    rgba(0, 212, 255, 1) 100%
+  );
+}
+.voteCount {
+  font-size: 20px;
+  margin: 0 10px;
+  color: black;
+}
